--- a/stomach_src/templates/html/base.html
+++ b/stomach_src/templates/html/base.html
@@ -73,8 +73,8 @@
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'user_recipes' %}"
                                class="p-r-none"><span class="glyphicon glyphicon-cutlery"></span> My Recipes</a></li>
-                        <li><a href=""
-                               class="p-r-none"><span class="glyphicon glyphicon-hdd"></span> My Stock</a></li>
+                        <li><a href="{% url 'user_storage' %}"
+                               class="p-r-none"><span class="glyphicon glyphicon-hdd"></span> My Storage</a></li>
                         <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         <li><a href=""
                                class="p-r-none"><span class="glyphicon glyphicon-user"></span> Account</a></li>
