--- a/stomach_src/templates/html/recipe/recipe_list.html
+++ b/stomach_src/templates/html/recipe/recipe_list.html
@@ -28,7 +28,8 @@
 
     {% if notAuthorized %}
         <div class="mkt-s2 container">
-            <div class="alert alert-warning" role="alert">{{ notAuthorized }}  <a href="/login" class="btn btn-warning" role="button">Login now</a></div>
+            <div class="alert alert-warning" role="alert">{{ notAuthorized }} <a href="/login" class="btn btn-warning"
+                                                                                 role="button">Login now</a></div>
 
         </div>
     {% endif %}
