--- a/stomach_src/templates/html/recipe/recipe_detail.html
+++ b/stomach_src/templates/html/recipe/recipe_detail.html
@@ -5,7 +5,6 @@
 {% block nav-style %}mkt-nav{% endblock nav-style %}
 
 {% block content %}
-
     {# Hero Section #}
     <div class="mkt-s1">
         <div class="mkt-s1-body container ">
@@ -84,8 +83,8 @@
             <div class="row">
                 <div class="col-lg-1"><a href="{% url 'recipe_edit' recipe.id %}" class="btn btn-info"><span
                         class="glyphicon glyphicon-edit"></span> Edit</a></div>
-                <div class="col-lg-1"><a href="{% url 'recipe_delete' recipe.id %}" class="btn btn-info"><span
-                        class="glyphicon glyphicon-trash"></span> Delete</a></div>
+                <div class="col-lg-1"><a href="{% url 'recipe_hide' recipe.id %}" class="btn btn-info" onclick="return confirm('Are you sure you want to remove this recipe?')"><span
+                        class="glyphicon glyphicon-trash"></span> Remove</a></div>
                 <div class="col-lg-10"></div>
             </div>
         </div>
