--- a/stomach_src/templates/html/recipe/recipe_edit.html
+++ b/stomach_src/templates/html/recipe/recipe_edit.html
@@ -6,7 +6,7 @@
     {% if success %}
 
         <div class="alert alert-success" role="alert">{{ success }}</div>
-        <a href="/stomach/recipe/new" class="btn btn-info" role="button">Add another recipe</a>
+        <a href="{% url 'recipe_new' %}" class="btn btn-info" role="button">Add another recipe</a>
 
     {% else %}
 
