--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -110,7 +110,7 @@
         <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
         <script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/django-dynamic/src/jquery.formset.js' %}"></script>
-        <script src="{% static 'js/recipe_edit.js' %}"></script>
+        <script src="{% static '/js/recipe_edit.js' %}"></script>
     {% endblock footer_javascript_site %}
     {% block footer_javascript_section %}{% endblock footer_javascript_section %}
     {% block footer_javascript_page %}{% endblock footer_javascript_page %}
