--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -60,12 +60,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/stomach/home">STOMACH</a>
+                <a class="navbar-brand" href="/">STOMACH</a>
             </div>
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li><a href="">Home</a></li>
                     <li><a href="{% url 'recipes_list' %}">Recipes</a></li>
                 </ul>
 
