--- a/templates/html/storage/storage_new.html
+++ b/templates/html/storage/storage_new.html
@@ -24,6 +24,7 @@
                         {{ form.as_p }}
                     </div>
                 {% endfor %}
+             {{ ingredientFormset.management_form }}
             </div>
         </div>
 
