--- a/templates/html/storage/storage_detail.html
+++ b/templates/html/storage/storage_detail.html
@@ -39,8 +39,8 @@
         <div class="row">
             <div class="col-lg-1"><a href="{% url 'storage_edit' storage.id %}" class="btn btn-info"><span
                     class="glyphicon glyphicon-edit"></span> Edit</a></div>
-            <div class="col-lg-1"><a href="{% url 'storage_delete' storage.id %}" class="btn btn-info"><span
-                    class="glyphicon glyphicon-trash"></span> Delete</a></div>
+            <div class="col-lg-1"><a href="{% url 'storage_hide' storage.id %}" class="btn btn-info"><span
+                    class="glyphicon glyphicon-trash" onclick="return confirm('Are you sure you want to remove this storage?')"></span> Delete</a></div>
             <div class="col-lg-10"></div>
         </div>
     </div>
