--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -89,13 +89,20 @@
     </div>
 </header>
 
+
 {# The Document Body #}
 <div id="site-wrapper">
+    <div class="row">
+    <div class="col-lg-2 col-sm-2 col-md-2 sidebar-block">
+    {% block sidebar %}<!-- insert default navigation text for every page -->{% endblock %}
+    </div>
+    <div class="col-lg-10 col-sm-10 col-md-10">
     {% block content %}
         if you see this, something is wrong!
     {% endblock content %}
+    </div>
+    </div>
 </div>
-
 {# The Footer #}
 <div class="footer">
     <div class="container">
