--- a/templates/html/recipe/recipe_list.html
+++ b/templates/html/recipe/recipe_list.html
@@ -4,6 +4,27 @@
 {% block title %}Recipes{% endblock title %}
 {% block nav-style %}mkt-nav{% endblock nav-style %}
 
+ {% block sidebar %}
+
+    <div class="mini-submenu">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+    </div>
+    <div class="list-group">
+        <span href="#" class="list-group-item active">
+            Filters
+        </span>
+        {% for filter in filters %}
+            <a href="{% url 'filter_recipes' category_id=filter.category_ID %}" class="list-group-item">
+             {{ filter.category_ID__name}} [{{ filter.count }}]
+            </a>
+        {% endfor %}
+
+    </div>
+ {% endblock %}
+
+
 {% block content %}
 
     <div class="mkt-s2 container">
