--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -51,7 +51,6 @@
         {% block nav-style %}{% endblock %}">
 
         <div class="container p-none">
-
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle"
                         data-toggle="collapse"
@@ -92,23 +91,16 @@
 
 {# The Document Body #}
 <div id="site-wrapper">
-    <div class="row">
-    <div class="col-lg-2 col-sm-2 col-md-2 sidebar-block">
-    {% block sidebar %}<!-- insert default navigation text for every page -->{% endblock %}
-    </div>
-    <div class="col-lg-10 col-sm-10 col-md-10">
+    <div class="container-fluid">
     {% block content %}
         if you see this, something is wrong!
     {% endblock content %}
     </div>
-    </div>
 </div>
 {# The Footer #}
-<div class="footer">
-    <div class="container">
+<footer class="container-fluid text-center">
         <p>Copyright STOMACH</p>
-    </div>
-</div>
+</footer>
 </body>
 
 {# Set of blocks that can be used to display JavaScript files #}
