--- a/templates/html/recipe/recipe_list.html
+++ b/templates/html/recipe/recipe_list.html
@@ -2,34 +2,36 @@
 {% load staticfiles %}
 
 {% block title %}Recipes{% endblock title %}
-{% block nav-style %}mkt-nav{% endblock nav-style %}
-
- {% block sidebar %}
-
-    <div class="mini-submenu">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-    </div>
-    <div class="list-group">
-        <span href="#" class="list-group-item active">
-            Filters
-        </span>
-        {% for filter in filters %}
-            <a href="{% url 'filter_recipes' category_id=filter.category_ID %}" class="list-group-item">
-             {{ filter.category_ID__name}} [{{ filter.count }}]
-            </a>
-        {% endfor %}
-
-    </div>
- {% endblock %}
-
+{% block nav-style %}{% endblock nav-style %}
 
 {% block content %}
 
-    <div class="mkt-s2 container">
-        <h2 class="mkt-s2-h">Recipes:</h2>
-        <div class="mkt-s2-body">
+    <div class="row content">
+
+        <div class="col-sm-2 sidenav">
+            <div class="mini-submenu">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </div>
+
+            <div class="list-group">
+                <span href="#" class="list-group-item active">
+                Filters
+                </span>
+                {% for filter in filters %}
+                    <a href="{% url 'filter_recipes' category_id=filter.category_ID %}"
+                       class="list-group-item recipefilter" id="{{ filter.category_ID }}">
+                        {{ filter.category_ID__name }} <span class="badge">{{ filter.count }}</span>
+                    </a>
+                {% endfor %}
+            </div>
+
+        </div>
+
+        <div class="col-sm-10 text-left">
+            <h2>Recipes:</h2>
+            <hr>
             {% if latest_recipes_list %}
                 <ul>
                     {% for recipe in latest_recipes_list %}
@@ -39,20 +41,18 @@
             {% else %}
                 <p>No recipes are available.</p>
             {% endif %}
+            <hr>
+            <a href="{% url 'recipe_new' %}" class="btn btn-info"><span class="glyphicon glyphicon-plus"></span> Add
+                recipe</a>
+
+            {% if message %}
+                <hr>
+                <div class="alert alert-warning" role="alert">{{ message }} <a href="/login"
+                                                                                     class="btn btn-warning"
+                                                                                     role="button">Login now</a>
+                </div>
+            {% endif %}
         </div>
     </div>
-
-    <div class="mkt-s2 container">
-        <h2 class="mkt-s2-h"><a href="{% url 'recipe_new' %}" class="btn btn-info"><span
-                class="glyphicon glyphicon-plus"></span> Add recipe</a></h2>
-    </div>
-
-    {% if notAuthorized %}
-        <div class="mkt-s2 container">
-            <div class="alert alert-warning" role="alert">{{ notAuthorized }} <a href="/login" class="btn btn-warning"
-                                                                                 role="button">Login now</a></div>
-
-        </div>
-    {% endif %}
 
 {% endblock %}
