--- a/templates/html/recipe/recipe_list.html
+++ b/templates/html/recipe/recipe_list.html
@@ -19,12 +19,28 @@
                 <span href="#" class="list-group-item active">
                 Filters
                 </span>
-                {% for filter in filters %}
-                    <a href="{% url 'filter_recipes' category_id=filter.category_ID %}"
-                       class="list-group-item recipefilter" id="{{ filter.category_ID }}">
+                {% if selected_filters %}
+                    {% for filter in selected_filters %}
+                        <a href="{% url 'recipes_list' %}{{ filter_string }}&removefilter={{ filter.id }}"
+                           class="list-group-item recipefilter selected-filter" id="{{ filter.id }}">
+                            {{ filter.name }}
+                        </a>
+                    {% endfor %}
+                {% endif %}
+
+                {% if filters %}
+                    {% for filter in filters %}
+                        <a
+                        {% if filter_string != '' %}
+                           href="{% url 'recipes_list' %}{{ filter_string }}&filter={{ filter.category_ID }}"
+                        {% else %}
+                           href="{% url 'recipes_list' %}?filter={{ filter.category_ID }}"
+                        {% endif %}
+                       class=" list-group-item recipefilter" id="{{ filter.category_ID }}">
                         {{ filter.category_ID__name }} <span class="badge">{{ filter.count }}</span>
-                    </a>
-                {% endfor %}
+                        </a>
+                    {% endfor %}
+                {% endif %}
             </div>
 
         </div>
@@ -48,8 +64,8 @@
             {% if message %}
                 <hr>
                 <div class="alert alert-warning" role="alert">{{ message }} <a href="/login"
-                                                                                     class="btn btn-warning"
-                                                                                     role="button">Login now</a>
+                                                                               class="btn btn-warning"
+                                                                               role="button">Login now</a>
                 </div>
             {% endif %}
         </div>
