--- a/templates/html/recipe/recipe_detail.html
+++ b/templates/html/recipe/recipe_detail.html
@@ -1,7 +1,7 @@
 {% extends 'html/base.html' %}
 {% load staticfiles %}
 
-{% block title %}Recipes{% endblock title %}
+{% block title %}{{ recipe.name }}{% endblock title %}
 {% block nav-style %}mkt-nav{% endblock nav-style %}
 
 {% block content %}
