--- a/templates/html/recipe/recipe_list.html
+++ b/templates/html/recipe/recipe_list.html
@@ -51,7 +51,7 @@
             {% if latest_recipes_list %}
                 <ul>
                     {% for recipe in latest_recipes_list %}
-                        <li><a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.name }}</a></li>
+                        <li><a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.name }} (Published: {{ recipe.published_date }} {% if user.is_superuser %} <span class="adminstuff ">| Visible: {{ recipe.visible }}</span> {% endif %})</a></li>
                     {% endfor %}
                 </ul>
             {% else %}
