removed recipe_user.html, now we simply call the recipe_list view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,3 +95,7 @@ textarea#id_description {
     font-weight: bold;
     background-color: lightgray;
 }
+
+.recipefilter-header {
+    font-weight: bold;
+}
