--- a/templates/html/recipe/recipe_list.html
+++ b/templates/html/recipe/recipe_list.html
@@ -15,8 +15,8 @@
                 <span class="icon-bar"></span>
             </div>
 
-            <div class="list-group">
-                <span href="#" class="list-group-item active">
+            <div class="list-group recipefilter-container">
+                <span href="#" class="list-group-item active recipefilter-header">
                 Filters
                 </span>
                 {% if selected_filters %}
