admin now can also edit and remove recipes.
else some refactoring, removed some unused code.

--- a/templates/html/recipe/recipe_detail.html
+++ b/templates/html/recipe/recipe_detail.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <hr>
-    {% if userIsCreator %}
+    {% if user_can_edit %}
         <div class="container">
             <div class="row">
                 <div class="col-lg-1"><a href="{% url 'recipe_edit' recipe.id %}" class="btn btn-info"><span
