--- a/templates/html/storage/storage_new.html
+++ b/templates/html/storage/storage_new.html
@@ -8,7 +8,7 @@
             <div class="alert alert-success" role="alert">{{ success }}</div>
             <a href="{% url 'storage_new' %}" class="btn btn-info" role="button">Add another storage</a>
             <a href="{% url 'user_storage' %}" class="btn btn-info" role="button">Go to storage overview</a>
-            <a href="{% url 'storage_detail' storage_id=id %}" class="btn btn-info" role="button">Show me my new storage</a>
+            <a href="{% url 'storage_detail' id %}" class="btn btn-info" role="button">Show me my new storage</a>
         </div>
 
     {% else %}
