links to categories in details

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,3 +99,17 @@ textarea#id_description {
 .recipefilter-header {
     font-weight: bold;
 }
+
+.categories {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 450px;
+}
+
+.categories li {
+    float: left;
+    font-size: 1em;
+    text-align: center;
+    padding: 0.5em;
+}
