--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -78,7 +78,7 @@
                                class="p-r-none"><span class="glyphicon glyphicon-user"></span> Account</a></li>
                     {% else %}
                         <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                        <li><a href="" class="p-r-none"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                        <li><a href="{% url 'signup' %}" class="p-r-none"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     {% endif %}
                 </ul>
             </div>
