--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -73,11 +73,11 @@
                         <li><a href="{% url 'recipes_user' %}" class="p-r-none"><span class="glyphicon glyphicon-cutlery"></span> My Recipes</a></li>
                         <li><a href="{% url 'user_storage' %}"
                                class="p-r-none"><span class="glyphicon glyphicon-hdd"></span> My Storage</a></li>
-                        <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                        <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         <li><a href="{% url 'userid' %}"
                                class="p-r-none"><span class="glyphicon glyphicon-user"></span> Account</a></li>
                     {% else %}
-                        <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        <li><a href="{% url 'login' %}"> <span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                         <li><a href="{% url 'signup' %}" class="p-r-none"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     {% endif %}
                 </ul>
