fixed floating footer

--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -98,7 +98,7 @@
     </div>
 </div>
 {# The Footer #}
-<footer class="container-fluid text-center">
+<footer class="text-center">
         <p>Copyright STOMACH</p>
 </footer>
 </body>
