--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,11 +10,19 @@
     height: 100%;
 }
 
+body{
+    display: inline-block;
+    padding: 2em;
+}
 /* Set black background color, white text and some padding */
 footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: #555;
     color: white;
-    padding: 15px;
+    display: inline-block;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
