Added Base functionality for saving more Settings

--- a/templates/html/account/account_view.html
+++ b/templates/html/account/account_view.html
@@ -9,7 +9,8 @@
             <div class="panel-heading"> General:</div>
             <div class="panel-body">
                 <table>
-                    {{ mysettings.as_table }}
+                    {{ myUserSettings.as_table }}
+                    {{ myStorageSettings.as_table }}
                 </table>
             </div>
         </div>
