--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -71,8 +71,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'recipes_user' %}" class="p-r-none"><span class="glyphicon glyphicon-cutlery"></span> My Recipes</a></li>
-                        <li><a href="{% url 'user_storage' %}"
-                               class="p-r-none"><span class="glyphicon glyphicon-hdd"></span> My Storage</a></li>
+                        {% if  request.user.settings.isActiveStorage %}
+                            <li><a href="{% url 'user_storage' %}"
+                                   class="p-r-none"><span class="glyphicon glyphicon-hdd"></span> My Storage</a></li>
+                        {% endif %}
                         <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         <li><a href="{% url 'myaccount' %}"
                                class="p-r-none"><span class="glyphicon glyphicon-user"></span> Account</a></li>
