--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -66,6 +66,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="">Home</a></li>
                     <li><a href="{% url 'recipes_list' %}">Recipes</a></li>
+                    <li><a href="{% url 'haystack_search' %}">Search</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
