--- a/templates/html/recipe/recipe_list.html
+++ b/templates/html/recipe/recipe_list.html
@@ -21,7 +21,7 @@
                 </span>
                 {% if selected_filters %}
                     {% for filter in selected_filters %}
-                        <a href="{% url 'recipes_list' %}{{ filter_string }}&removefilter={{ filter.id }}"
+                        <a href="{% url 'recipes_list' %}{{ filter_string }}&amp;removefilter={{ filter.id }}&amp;q={{ query }}"
                            class="list-group-item recipefilter selected-filter" id="{{ filter.id }}">
                             {{ filter.name }}
                         </a>
@@ -31,13 +31,13 @@
                 {% if filters %}
                     {% for filter in filters %}
                         <a
-                        {% if filter_string != '' %}
-                           href="{% url 'recipes_list' %}{{ filter_string }}&filter={{ filter.category_ID }}"
-                        {% else %}
-                           href="{% url 'recipes_list' %}?filter={{ filter.category_ID }}"
-                        {% endif %}
-                       class=" list-group-item recipefilter" id="{{ filter.category_ID }}">
-                        {{ filter.category_ID__name }} <span class="badge">{{ filter.count }}</span>
+                                {% if filter_string != '' %}
+                                    href="{% url 'recipes_list' %}{{ filter_string }}&amp;filter={{ filter.category_ID }}&amp;q={{ query }}"
+                                {% else %}
+                                    href="{% url 'recipes_list' %}?filter={{ filter.category_ID }}&amp;q={{ query }}"
+                                {% endif %}
+                                    class=" list-group-item recipefilter" id="{{ filter.category_ID }}">
+                            {{ filter.category_ID__name }} <span class="badge">{{ filter.count }}</span>
                         </a>
                     {% endfor %}
                 {% endif %}
@@ -48,10 +48,17 @@
         <div class="col-sm-10 text-left">
             <h2>Recipes:</h2>
             <hr>
+            <form type="get" action=".">
+                <input type="text" name="q" value="{{ query }}">
+                <button type="submit">Search</button>
+            </form>
+            <hr>
             {% if latest_recipes_list %}
                 <ul>
                     {% for recipe in latest_recipes_list %}
-                        <li><a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.name }} (Published: {{ recipe.published_date }} {% if user.is_superuser %} <span class="adminstuff ">| Visible: {{ recipe.visible }}</span> {% endif %})</a></li>
+                        <li><a href="{% url 'recipe_detail' recipe.rec_id %}">{{ recipe.name }}
+                            (Published: {{ recipe.published_date }} {% if user.is_superuser %}
+                                <span class="adminstuff ">| Visible: {{ recipe.visible }}</span> {% endif %})</a></li>
                     {% endfor %}
                 </ul>
             {% else %}
