--- a/templates/html/recipe/recipe_list.html
+++ b/templates/html/recipe/recipe_list.html
@@ -55,24 +55,26 @@
                 <ul id="recipe-list">
                     {% for recipe in latest_recipes_list %}
                         <li><a href="{% url 'recipe_detail' recipe.rec_id %}">{{ recipe.name }}
-                            (Published: {{ recipe.published_date }} {% if user.is_superuser %}
-                                <span class="adminstuff ">| Visible: {{ recipe.visible }}</span> {% endif %})</a></li>
+                            (Published: {{ recipe.published_date }})</a></li>
                     {% endfor %}
                 </ul>
             {% else %}
                 <p>No recipes are available.</p>
             {% endif %}
             <hr>
+        {% if user.is_authenticated %}
+
             <a href="{% url 'recipe_new' %}" class="btn btn-info"><span class="glyphicon glyphicon-plus"></span> Add
                 recipe</a>
-
-            {% if message %}
-                <hr>
-                <div class="alert alert-warning" role="alert">{{ message }} <a href="/login"
-                                                                               class="btn btn-warning"
-                                                                               role="button">Login now</a>
+            {% else %}
+                <div class="alert alert-warning" role="alert">Sign up or login to add add new recipes! <a href="/login"
+                                                                               class="btn btn-warning btn-sm"
+                                                                               role="button">Login</a> <a href="/signup"
+                                                                               class="btn btn-warning btn-sm"
+                                                                               role="button">Sign up</a>
                 </div>
             {% endif %}
+        <hr>
         </div>
     </div>
 
